# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Implementation details. These aren't part of the public API.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "impl",
    srcs = [
        "abi/abi_diff.bzl",
        "abi/abi_dump.bzl",
        "abi/abi_prop.bzl",
        "abi/extracted_symbols.bzl",
        "abi/kernel_build_abi.bzl",
        "abi/kernel_build_abi_dist.bzl",
        "btf.bzl",
        "common_providers.bzl",
        "constants.bzl",
        "debug.bzl",
        "gki_artifacts.bzl",
        "image/boot_images.bzl",
        "image/dtbo.bzl",
        "image/image_utils.bzl",
        "image/initramfs.bzl",
        "image/kernel_images.bzl",
        "image/system_dlkm_image.bzl",
        "image/vendor_dlkm_image.bzl",
        "kernel_build.bzl",
        "kernel_build_config.bzl",
        "kernel_compile_commands.bzl",
        "kernel_config.bzl",
        "kernel_config_transition.bzl",
        "kernel_dtstree.bzl",
        "kernel_env.bzl",
        "kernel_filegroup.bzl",
        "kernel_headers.bzl",
        "kernel_kythe.bzl",
        "kernel_module.bzl",
        "kernel_modules_install.bzl",
        "kernel_toolchain_aspect.bzl",
        "kernel_uapi_headers.bzl",
        "kernel_unstripped_modules_archive.bzl",
        "kmi_symbol_list.bzl",
        "merged_kernel_uapi_headers.bzl",
        "modules_prepare.bzl",
        "raw_kmi_symbol_list.bzl",
        "srcs_aspect.bzl",
        "stamp.bzl",
        "status.bzl",
        "utils.bzl",
    ],
    visibility = ["//build/kernel/kleaf:__subpackages__"],
    deps = [
        "//build/kernel/kleaf:directory_with_structure_def",
        "//build/kernel/kleaf:hermetic_tools_def",
        "//build/kernel/kleaf:update_source_file_def",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:sets",
        "@bazel_skylib//lib:shell",
        "@bazel_skylib//rules:common_settings",
    ],
)
